Fixing contrast error in midtermstyle.css

--- a/midtermstyle.css
+++ b/midtermstyle.css
@@ -4,7 +4,7 @@ body{
   
   a{
       font-weight:bold;
-      color:teal;
+      color:black;
     }
   
   h1#site-title {
